[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Textures/NextLvl_Back.png" type="Texture" id=1]
[ext_resource path="res://assets/font/MILLENNIA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Textures/ButtonSimplePress.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures/ButtonGreenPress.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures/ButtonGreenDef.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures/ButtonGreenHover.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures/ButtonSimpleDef.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures/ButtonSimpleHover.png" type="Texture" id=8]
[ext_resource path="res://assets/PixelAdventure1/Main Characters/Virtual Guy/Idle (32x32).png" type="Texture" id=9]
[ext_resource path="res://src/UI/PopUps/NextLvl_PopUp.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
} ]

[node name="Win_PopUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.0784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUP" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -144.0
margin_right = 155.0
margin_bottom = 144.0
rect_min_size = Vector2( 310, 288 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="PopUP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 68.197
margin_right = 125.0
margin_bottom = 180.197
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="PopUP/Buttons"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopUP/Buttons/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -19.0
margin_right = 117.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Next Level
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton3" type="TextureButton" parent="PopUP/Buttons"]
margin_top = 60.0
margin_right = 250.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 50 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopUP/Buttons/StartButton3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -19.0
margin_right = 117.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="AnimatedSprite" parent="PopUP"]
position = Vector2( 153.001, 139.066 )
scale = Vector2( 3, 3 )
frames = SubResource( 14 )
animation = "Win"
frame = 3
playing = true
